--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "wdelfuego/nova-calendar",
+    "name": "webard/nova-calendar",
     "description": "A powerful event calendar Tool for Laravel's Nova 4.",
     "keywords": [
         "laravel",
